<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/icon_menu_sort_by"
        android:icon="@drawable/ic_sort_button_white_24dp"
        android:title="@string/menu_icon_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_most_popular"
                android:orderInCategory="1"
                android:title="@string/menu_action_sort_by_most_popular"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_by_top_rated"
                android:orderInCategory="2"
                android:title="@string/menu_action_sort_by_top_rated"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_by_favorites"
                android:orderInCategory="3"
                android:title="@string/menu_action_sort_by_favorites"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>